# DealRadar

./: .gitignore  CLAUDE.md  DECISIONS.md  Procfile  README.md  TODO.yml  journal.md  pyproject.toml  render.yaml  schema.sql  store.py
.github/workflows/: daily.yml
collectors/: base.py  ch.py  eu_locations.py  gh.py  hn.py  ph.py  rss.py
config/: thesis.yaml  thesis_model.py
dealradar/: run.py
digest/: email_sender.py  feedback_api.py  renderer.py  slack_sender.py
enrich/: dedupe.py  exclude_updater.py  fewshot_updater.py  llm_client.py  precision_tracker.py  ranker.py  scorer.py
enrich/prompts/: score_fewshot.txt  score_system.txt
scripts/: fix_yaml.py  smoke_test.py
spoq/: ROADMAP.yml
spoq/epics/: README.md
spoq/epics/active/collectors/: 01-eu-locations.yml  02-ch-collector.yml  03-gh-collector.yml  04-ph-collector.yml  05-hn-collector.yml  06-rss-collector.yml  07-collector-hardening.yml  EPIC.md
spoq/epics/active/digest-delivery/: 01-renderer.yml  02-feedback-api.yml  03-slack-sender.yml  04-email-sender.yml  05-render-deploy.yml  06-run-report.yml  EPIC.md
spoq/epics/active/enrichment/: 01-dedupe.yml  02-scoring-prompt.yml  03-scorer.yml  04-ranker.yml  EPIC.md
spoq/epics/active/feedback-loop/: 01-fewshot-updater.yml  02-precision-tracker.yml  03-exclude-updater.yml
spoq/epics/complete/collectors/: 01-eu-locations.yml  02-ch-collector.yml  03-gh-collector.yml  04-ph-collector.yml  05-hn-collector.yml  06-rss-collector.yml  07-collector-hardening.yml
spoq/epics/complete/digest-delivery/: 01-renderer.yml  02-feedback-api.yml  (+4 more)
(+16 files in other folders)
