[project]
name = "dealradar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "anthropic>=0.25",
    "rapidfuzz>=3.9",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pyyaml>=6.0",
    "resend>=2.0",
    "feedparser>=6.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
